# justice-driven-task-power

./: .gitignore  =2.31.0  ANDROID_DATA_PERSISTENCE.md  ANDROID_EXPORT_FIX.md  BUILD_CONSOLIDATION.md  BUILD_LINUX.md  BUILD_SIGNING.md  ESTADOS_TAREAS.md  FIREBASE_SETUP.md  FIRMA_RELEASE.md  GOOGLE_SHEETS_SETUP.md  README.md  SISTEMA_RECOMPENSAS.md  SYNC_ALGORITHM.md  VERSIONING.md  _collections_patch.py  app.py  apply_release_signing.sh  build.sh  build_android.sh  build_linux.sh  build_log.txt  build_with_icon.sh  collections_patch.py  create_keystore.sh  credenciales_android.json  demo_task_form.py  example_system.py  firebase_database_rules.json  google-services.json  justice-driven-task-power.toml  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
app/: __init__.py  __main__.py  app.py  collections_compat.py  main.py
app/data/: __init__.py  database.py  goal_repository.py  habit_repository.py  models.py  reward_repository.py  subtask_repository.py  task_repository.py
app/logic/: __init__.py  system_levels.py  system_points.py
app/models/: __init__.py  goal.py  habit.py  reward.py  subtask.py  task.py  user.py
app/services/: __init__.py  backup_service.py  csv_backup_service.py  database_service.py  firebase_auth_service.py  firebase_sync_service.py  goal_service.py  goals_service.py  google_sheets_service.py  habit_service.py  habits_service.py  points_service.py  progress_service.py  reward_service.py  rewards_service.py  settings_service.py  sync_service.py  task_service.py  user_service.py  user_settings_service.py
test/: conftest.py
(+168 files in other folders)
