[project]
name = "justice-driven-task-power"
version = "0.1.1"
description = "conviértete en el héroe de tu propio progreso con tareas y hábitos organizados"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flet>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

